# pytest-fixture-remover

./: .libcst.codemod.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: ci.yml
pytest_fixture_remover/: codemod.py
tests/: test_command.py
